# hol-light

./: .gitattributes  .gitignore  .mcp.json  CHANGES  Dockerfile  META  Makefile  ProjectHome.md  QUICK_REFERENCE.txt  README  README.md  VERYQUICK_REFERENCE.txt  arith.ml  basics.ml  bignum_num.ml  bignum_zarith.ml  bool.ml  build-instructions.sh  build.sh  cake.S.patch  calc_int.ml  calc_num.ml  calc_rat.ml  candle  candle_boot.ml  candle_compute.ml  candle_kernel.ml  candle_nums.ml  candle_pretty.ml  candletest  candletest.mk  canon.ml  cart.ml  ci.ml  class.ml  compute.ml  database.ml  define.ml  doc-to-help.sed  drule.ml  (+66 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
100/: arithmetic.ml  arithmetic_geometric_mean.ml  ballot.ml  bernoulli.ml  bertrand.ml  buffon.ml  cantor.ml  cayley_hamilton.ml  circle.ml  combinations.ml  constructible.ml  cubedissection.ml  cubic.ml  desargues.ml  descartes.ml  dirichlet.ml  div3.ml  e_is_transcendental.ml  euler.ml  feuerbach.ml  four_squares.ml  fourier.ml  friendship.ml  green.ml  heron.ml  inclusion_exclusion.ml  independence.ml  isoperimetric.ml  konigsberg.ml  lagrange.ml  lhopital.ml  liouville.ml  minkowski.ml  morley.ml  pascal.ml  pick.ml  piseries.ml  platonic.ml  pnt.ml  polyhedron.ml  (+13 more)
Arithmetic/: arithprov.ml  definability.ml  derived.ml  fol.ml  godel.ml  pa.ml  sigmacomplete.ml  tarski.ml
Boyer_Moore/: README  clausal_form.ml  counterexample.ml  main.ml  (+13 more)
mcp/: README.md  SKILL.md  TUTORIAL.md  hol-mcp.toml  make_checkpoint.py  mcp_helpers.ml  pyproject.toml  server.py  smoke_test.py  test_server.py
(+2439 files in other folders)
