[project]
name = "hol-light-mcp"
version = "0.1.0"
description = "MCP server for HOL Light theorem prover"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
hol-light-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
